2006-05-14  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Set up for 2.1.3.
	* src/GrampsDb/_ReadXML.py (start_url): Parse URL type.
	* example/gramps/exapmle.gramps: Add repositories, use new XML.
	* example/gramps/data.gramps: Add repositories, use new XML.
	* src/DateHandler/__init__.py: Remove unneeded imports.
	* src/plugins/Calendar.py (print_page): Use GrampsLocale._months.

2006-05-14  Brian Matherly  <brian@gramps-project.org>
	* src/PluginUtils/_ReportUtils.py: Change strings to include 
	gender instead of "child of"
	* src/plugins/FamilyGroup.py: Fix for Event and EventType changes.

2006-05-14  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RepositoryView.py: column fixes
	* src/DataViews/_SourceView.py: column fixes
	* src/DataViews/_EventView.py: column fixes
	* src/DataViews/_FamilyList.py: column fixes
	* src/DataViews/_PlaceView.py: column fixes
	* src/DataViews/_PersonView.py: column fixes
	* src/DisplayModels.py: column/sort fixes
	* src/PageView.py: column/sort fixes
	* src/DateHandler/__init__.py: import DateParser and DateDisplay
	* src/DataViews/_PersonView.py: default gender filter to "any"
	* configure.in: bump up to 2.1.2

2006-05-14  Alex Roitman  <shura@gramps-project.org>
	* src/DateHandler/__init__.py: Proper import sequence.
	* src/DateHandler/_DateHandler.py: Split into parts.
	* src/DateHandler/_DateUtils.py: Add new file.
	* src/DateHandler/_Date_sk.py: Bring to the new module structure.
	* src/DateHandler/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/GrampsDb/_ReadGedcom.py: Import from proper module.

	* src/plugins/ChangeTypes.py (init_gui): Work around intltool bug.
	* src/plugins/Summary.py: Set titles properly.
	* src/plugins/CountAncestors.py: Add window title, remove extra text.
	* src/Filters/Rules/Person/_HasNoteRegexp.py: Import re module.

2006-05-13  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Add option for number of generations in